src/Base/main/default/objects/WorkOrderLineItem/WorkOrderLineItem.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>