src/Base/main/default/objects/WorkOrderLineItem/fields/ERP_Order_Task__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ERP Order Task</label>
    <referenceTo>AcctSeed__Project_Task__c</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>