src/Base/main/default/objects/WorkOrderLineItem/fields/Is_From_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Is_From_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This gets set by the system if the Work Order is created automatically from an opportunity</description>
    <label>Is From Opportunity</label>
    <type>Checkbox</type>
</CustomField>