src/Base/main/default/objects/WorkOrderLineItem/fields/isWarranty__c.field-meta.xml
<CustomField>
    <fullName>isWarranty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isWarranty</label>
    <type>Checkbox</type>
</CustomField>