src/Base/main/default/objects/WorkOrderLineItem/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <formula>WorkOrder.Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>