src/Base/main/default/objects/WorkOrderLineItem/fields/Visible_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Visible_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether this work order line and all associated Products are displayed on the customer facing invoice</description>
    <inlineHelpText>Controls whether this work order line and all associated Products are displayed on the customer facing invoice</inlineHelpText>
    <label>Visible to Customer</label>
    <type>Checkbox</type>
</CustomField>