src/Base/main/default/objects/WorkOrderLineItem/fields/Warranty_Case_Created__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Case_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warranty Case Created</label>
    <type>Checkbox</type>
</CustomField>