src/Base/main/default/objects/WorkOrderLineItem/fields/WorkOrder_RecordType__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_RecordType__c</fullName>
    <formula>WorkOrder.RecordType.Name</formula>
    <label>WorkOrder RecordType</label>
    <type>Text</type>
</CustomField>